frontend/test/should_pass/exectype_SetmapClearUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(x.clear());
	}
}