frontend/test/should_fail/exectype_AssignVarToAttribute.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=varia ;> f:foo=foo::Bar ;> {x.f=f}); // only node/edge type allows attribute access
	}
}